@@ -1,3 +1,12 @@
+2007-12-11  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libutil++/op_bfd.h: remove sym_offset(), we can get what did
+	  sym_offset() in a simpler way at call site
+	* libutil++/op_bfd.cpp:
+	* libpp/callgraph_container.cpp:
+	* libpp/profile_container.cpp:
+	* libpp/profile_container.h:
+
 2007-11-25  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* daemon/opd_stats.c: dump invalid pc count, added to oprofile stats
